fix: adjust bleed container sizing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -71,7 +71,7 @@
 
   /* Bleed Container */
   .bleed {
-    @apply z-10 max-w-none md:-mx-8 lg:-mx-16 xl:-mx-24 2xl:-mx-32;
+    @apply z-10 max-w-none md:-mx-8 lg:-mx-16 2xl:-mx-24;
   }
 }
 
